<resources>
    <!--General-->
    <string name="app_name">BENJOL</string>

    <!--Login & Register-->
    <string name="email">E-mail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgetPassword">Forgot your password ?</string>
    <string name="login">Sign In</string>
    <string name="loginText">Enter Your Login Information</string>
    <string name="registerText">Enter Your Account Details</string>
    <string name="logout">Sign Out</string>
    <string name="register">Register</string>
    <string name="firstName">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="create">Create an Account</string>
    <string name="google">Sign In With Google</string>
    <string name="hint_booking_date">Input date here ...*2020-11-30</string>
    <string name="serviceRingan">Service Ringan</string>
    <string name="serviceSedang">Service Sedang</string>
    <string name="serviceBerat">Service Berat</string>
    <string name="et_problem_placeholder">Type your problem here...</string>
    <string name="tv_is_pickup">Need pickup service ? (Optional)</string>
    <string name="pickup_button">Input Location</string>
    <string name="what_problem">What kind of service do you need ?</string>
    <string name="when">When ?</string>
    <string name="tv_select_motor">Select Motorcycle</string>


    <!--Profile-->
    <string name="accountLabel">Account</string>
    <string name="phoneNumberLabel">Phone Number</string>
    <string name="emailLabel">Email</string>
    <string name="genderLabel">Gender</string>
    <string name="birthDateLabel">Birth Date</string>
    <string name="motorcyclesLabel">Your Motorcycles</string>
    <string name="editProfileLabel">Edit your profile information.</string>
    <string name="profileLabel">Profile</string>
    <string name="editProfile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="changePassword">Change Password</string>
    <string name="oldPass">Old Password</string>
    <string name="newPass">New Password</string>
    <string name="upload">Click below to select image</string>
    <string name="signOut">Sign Out</string>
    <string name="profpic">Set Profile Image</string>
    <string name="label">Click to edit profile.</string>

    <!--Motorcycle-->
    <string name="motorcycleInfo">Motorcycle Info</string>
    <string name="motorcycleDetail">Input your motorcycle details</string>
    <string name="plateNumberLabel">Plate Number</string>
    <string name="brandLabel">Brand</string>
    <string name="inputMotorLabel">Input Motor</string>

    <!--Dashboard-->
    <string name="welcomeTitle">Hi, </string>
    <string name="profilName">XXXXX</string>
    <string name="welcomeDesc">Welcome to your trusted bengkel app</string>
    <string name="findBengkel">Search Bengkel</string>
    <string name="findSparepart">Find Sparepart</string>
    <string name="trackDelivery">Track Delivery</string>
    <string name="checkProgress">Check Progress</string>
    <string name="upcomingTitle">Your Latest Booking</string>
    <string name="bengkelName">Bengkel xxxxxx</string>
    <string name="dayDate">Day, yyyy-mm-dd</string>
    <string name="serviceStatusDashboard">Service xxxxx</string>

    <!--Sparepart-->
    <string name="price">Rp...</string>

    <!--Bengkel-->
    <string name="searchBengkel">Search Bengkel</string>
    <string name="namaBengkel">Bengkel XXX</string>
    <string name="alamatBengkel">JL. XXX No. YY</string>
    <string name="nomorBengkelLabel">Phone Number : </string>
    <string name="nomorBengkel">08xx xxxx xxxx </string>
    <string name="bookService">Book Service</string>
    <string name="cariSparepart">Cari Sparepart</string>
    <string name="callNumber">Call Number</string>
    <string name="wa">Whatsapp</string>

    <!--Pick Up-->
    <string name="pickupLocation">Pick Up Location</string>
    <string name="deliveryLocation">Drop Off Location</string>
    <string name="inputLocation">Type your location here</string>
    <string name="confirmLocation">Confirm</string>

    <!--Pick Up Progress-->
    <string name="deliveryLabel">Pickup Status</string>
    <string name="pickUpProgress1">Picking up your vehicle</string>
    <string name="pickUpProgress2">Processing your service</string>
    <string name="pickUpProgress3">Delivering back to you</string>

    <!--Serivice Progress-->
    <string name="percentageProgress">xx%</string>
    <string name="estimatedTitleProgress">Estimated Time:</string>
    <string name="estimatedProgress">xx:xx:xx</string>
    <string name="statusProgress">STATUS...</string>
    <string name="paymentDetailProgress">Payment Detail</string>
    <string name="start">Start Time</string>
    <string name="end">End Time</string>

    <!--Payment-->
    <string name="paymentDetail">Payment Detail</string>
    <string name="bengkelLabel">Bengkel</string>
    <string name="transactionIdLabel">Transaction No.</string>
    <string name="dateLabel">Date</string>
    <string name="plateLabel">Plate Number</string>
    <string name="costLabel">Total Cost</string>
    <string name="noteLabel">Bengkel Note</string>
    <string name="repairmentNoteLabel">Repaiment Note</string>
    <string name="statusLabel">Status</string>
    <string name="transactionId">xxxx</string>
    <string name="date">yyyy-mm-dd</string>
    <string name="plateNumber">L xxxx Y</string>
    <string name="cost">Rp. </string>
    <string name="note">Lorem ipsum dolor sit amet</string>
    <string name="status">Unpaid</string>
    <string name="transfer">If you want to pay via bank transfer.</string>
    <string name="receipt">Upload Receipt</string>

    <string name="book_title">Book title</string>
    <string name="book_description">Book description</string>
    <string name="your_payment_is_being_confirmed">Your payment is being confirmed</string>
</resources>
