<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/base_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/base_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/motorcycleInfo"
                android:textStyle="bold"
                android:textSize="15pt"
                android:layout_gravity="start"
                android:layout_marginTop="70dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/motorcycleDetail"
                android:textSize="8pt"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/motor_plate_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:hint="@string/plateNumberLabel"
                android:background="@drawable/rounded_edit_text"/>

            <EditText
                android:id="@+id/motor_brand"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/brandLabel"
                android:background="@drawable/rounded_edit_text"/>

            <Button
                android:id="@+id/add_motor_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/rounded_button"
                android:textColor="@color/colorTextDark"
                android:text="@string/inputMotorLabel"/>

        </LinearLayout>
    </RelativeLayout>
</layout>