<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/base_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/base_layout" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="32dp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="80dp">

            <ImageView
                android:id="@+id/bengkel_image"
                android:layout_marginTop="100dp"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:background="@drawable/rounded_image_drawable"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/nama_bengkel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/namaBengkel"
                    android:textStyle="bold"
                    android:textSize="12pt"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/chat"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/alamat_bengkel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/alamatBengkel"
                android:textSize="8pt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/nomorBengkelLabel"
                android:textSize="8pt"/>
            <TextView
                android:id="@+id/nomor_bengkel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/nomorBengkel"
                android:textSize="8pt"/>
            <Button
                android:id="@+id/book_service_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:textColor="?attr/colorTextDark"
                android:text="@string/bookService"/>
            <Button
                android:id="@+id/list_sparepart_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:textColor="?attr/colorTextDark"
                android:text="@string/cariSparepart"/>

        </LinearLayout>
        <include
            android:id="@+id/navbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/navbar"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"/>
    </RelativeLayout>
</layout>